# POSIX_API

./: CMakeLists.txt  main.cpp
file/: w_w_file.cpp  w_w_file.h
pipe/: w_w_pipe.cpp  w_w_pipe.h
pipe/xProgram/: P  xP.cpp
